# ai-rel-graph-mvp

./: .dockerignore  .gitignore  CLAUDE.md  ML_TAG_SYSTEM.md  Makefile  README.md  RUN_DEMO.sh  docker-compose.prod.yml  docker-compose.yml  pipeline_walkthrough.md  project_proposal.md
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  demo.py  demo_schema.py  mypy.ini  process_documents.py  pyproject.toml  test_text_extraction.py  visualize_graph.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_vector_embeddings_and_constraints.py  002_ml_based_tags_with_embeddings.py  2c24fc77f490_add_users_table_for_google_oauth_tokens.py  3f39e2b65c07_added_local_files.py  50b9e07440c8_remove_similarity_check_constraint.py  57397b12868b_initial_schema_with_pgvector.py  6bbd67eacddd_add_parent_folder_id_to_documents_table.py  914f42b1b109_new_stuff.py  a1b2c3d4e5f6_add_source_field_to_documents.py  cbb1893cff63_initial_migration.py  f1a9bd3a22f3_switch_to_tag_based_system.py
backend/app/: config.py  main.py
backend/app/api/v1/: drive.py  files.py  graph.py  processing.py  router.py  semantic.py  users.py
backend/app/core/: auth.py  celery_app.py  config.py  database.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  cluster.py  file.py  file_tag.py  job.py  relationship.py  tag.py  user.py
backend/app/repositories/: __init__.py  base_repository.py  document_repository.py  entity_repository.py  similarity_repository.py  tag_repository.py  user_repository.py
backend/app/services/: __init__.py  drive_service.py  embedding_service.py  graph_builder.py  llm_tagging_service.py  ml_tag_extraction.py  semantic.py  similarity_service.py  tag_consolidation.py  tag_extraction.py  tag_hierarchy_service.py  tag_service.py  text_extraction.py
backend/app/workers/: __init__.py  init.py  tasks.py
backend/tests/: conftest.py  test_semantic_service.py
backend/tests/api/: test_files.py
backend/tests/models/: README.md  __init__.py  test_cluster.py  test_file.py  test_job.py  test_relationship.py
frontend/: .env.example  (+9 more)
(+48 files in other folders)
